src/objects/ADvendio__BillingRun__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Advertiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advertiser</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>BillingRuns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>BillingRuns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignRuntimeEnd__c</fullName>
        <label>Campaign Runtime (End)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignRuntimeStart__c</fullName>
        <label>Campaign Runtime (Start)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__EndDate__c</fullName>
        <label>Planned Invoice Date (End)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__IsRunning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a BillingRun as started, but not finished</description>
        <inlineHelpText>Indicates this BillingRun as started, but not finished</inlineHelpText>
        <label>IsRunning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentDueDate__c</fullName>
        <label>Payment Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>due to beginning of interval</fullName>
                </value>
                <value>
                    <fullName>due to the end of interval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentInterval__c</fullName>
        <label>Payment Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>total account (one Invoice)</fullName>
                </value>
                <value>
                    <fullName>monthly (1 month)</fullName>
                </value>
                <value>
                    <fullName>quarter (3 months)</fullName>
                </value>
                <value>
                    <fullName>half year (6 months)</fullName>
                </value>
                <value>
                    <fullName>year (12 months)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__PaymentStart__c</fullName>
        <label>Payment Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>before / during Billingperiod</fullName>
                </value>
                <value>
                    <fullName>after Billingperiod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__PostalRecipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Postal Recipient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Runs (Postal Recipient)</relationshipLabel>
        <relationshipName>BillingRunsPostalRecipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debtor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Runs (Debtor)</relationshipLabel>
        <relationshipName>BillingRunsRecipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__StartDate__c</fullName>
        <label>Planned Invoice Date (Start)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>PDFs Created</fullName>
                </value>
                <value>
                    <fullName>PDFs Merged</fullName>
                </value>
                <value>
                    <fullName>Send</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Billing Run</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__StartDate__c</columns>
        <columns>ADvendio__EndDate__c</columns>
        <columns>ADvendio__InvoiceDate__c</columns>
        <columns>ADvendio__IsRunning__c</columns>
        <columns>ADvendio__Status__c</columns>
        <columns>ADvendio__PaymentInterval__c</columns>
        <columns>ADvendio__PaymentStart__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BR-{000000}</displayFormat>
        <label>Billing Run</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>